fix svggradient component visibility

--- a/cat-breeds-nextjs/src/styles/components/_icon.scss
+++ b/cat-breeds-nextjs/src/styles/components/_icon.scss
@@ -45,6 +45,8 @@
 
 .svgGradient {
   visibility: hidden;
+  height: 0;
+  width: 0;
 }
 
 .icon-bg {
